# notify-github-trend

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: notify.yml  test_notify.yml
notify_ghtrend/: main.py
notify_ghtrend/exactractor/: github.py
notify_ghtrend/lib/: notion_client.py  translater.py
notify_ghtrend/notifier/: base.py  qiita.py
notify_ghtrend/poster/: base.py  qiita.py
notify_ghtrend/resource/: sample.json  sample_qiita_request_body.json  test.tpl
tests/: test_notify_ghtrend.py
