[tool.poetry]
name = "notify-ghtrend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyGithub = "^1.55"
bs4 = "^0.0.1"
requests = "^2.27.1"
Jinja2 = "^3.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
